# EmbraceDB

./: .clang-format  .gitignore  ARCHITECTURE.md  BUILD.md  CMakeLists.txt  CONTRIBUTING.md  README.md  ROADMAP.md  TESTING.md
.github/workflows/: ci.yml  coverage.yml  test.yml
.zed/: settings.json  tasks.json
docs/: results.txt
fuzz/: fuzz_wal_parser.cpp
scripts/: coverage.sh  format.sh  run_sanitizers.sh
src/: main.cpp
src/core/: common.hpp  status.hpp
src/indexing/: btree.cpp  btree.hpp  node.hpp
src/log/: logger.cpp  logger.hpp
src/storage/: checksum.cpp  checksum.hpp  snapshot.cpp  snapshot.hpp  wal.cpp  wal.hpp
tests/: CMakeLists.txt  test_btree.cpp  test_btree_basic.cpp  test_btree_corruption.cpp  test_btree_edge_cases.cpp  test_btree_stress.cpp  test_btree_structure.cpp  test_crash_simulation_stress.cpp  test_failure_injection.cpp  test_main.cpp  test_state_machine_properties.cpp  test_status.cpp  test_utils.hpp  test_wal.cpp  test_wal_recovery.cpp  test_wal_recovery_property.cpp
